# how-kafka-works

./: README.md  docker-compose.yaml  kafka-intro-pres.md  kafka-intro~pres.md  kakfa-architecture-patterns.md
docker/: docker-compose.yml
kafka-demo/: pyproject.toml
kafka-demo/kafka_demo/consumer/: __main__.py  model.py
kafka-demo/kafka_demo/producer/: __main__.py
scripts/: requirements.txt
scripts/consumer/: __main__.py  model.py
scripts/producer/: __main__.py
