[tool.poetry]
name = "kafka-demo"
version = "0.1.0"
description = ""
authors = ["Jon Boulineau <jboulineau@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent_kafka = "^2.3.0"
requests = "^2.26.0"
fastavro = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
